Navigation based on home ID

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -9,19 +9,17 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/all_rooms_recycler"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:clickable="true"
         android:clipToPadding="false"
         android:focusable="true"
         android:minWidth="250dp"
-        android:minHeight="@dimen/home_list_item_height"
         app:layout_constraintBottom_toTopOf="@+id/returnButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2"
-        tools:itemCount="3" />
+        app:layout_constraintVertical_bias="0.2" />
 
     <Button
         android:id="@+id/returnButton"
