Add/Remove Homes

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -9,25 +9,43 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/all_rooms_recycler"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
         android:clickable="true"
         android:clipToPadding="false"
         android:focusable="true"
         android:minWidth="250dp"
-        app:layout_constraintBottom_toTopOf="@+id/addHomeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        android:layout_height="450dp" />
 
-    <Button
-        android:id="@+id/addHomeButton"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/return_text"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/all_rooms_recycler">
 
+        <Button
+            android:id="@+id/addHomeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/addHomeButton"
+            style="?android:attr/buttonBarButtonStyle" />
+
+        <Button
+            android:id="@+id/removeHomeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/removeHomeButton"
+            style="?android:attr/buttonBarButtonStyle" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
