--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,6 @@
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:layout_marginBottom">20dp</item>
         <item name="android:textSize">@dimen/large_text_size</item>
-        <item name="android:textAppearance">bold</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
