--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -30,7 +30,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.4"
-        android:layout_height="450dp" />
+        android:layout_height="450dp"
+        />
 
     <LinearLayout
         android:layout_width="wrap_content"
