--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,6 +33,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/all_chores_recycler"
         android:layout_width="wrap_content"
         android:clickable="true"
         android:clipToPadding="false"
