--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_homeScreen_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_addHomeFragment"
+            app:destination="@id/addHomeFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -33,6 +36,15 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_menuFragment"
+            app:destination="@id/menuFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addHomeFragment"
+        android:name="com.chorey.ui.menu.AddHomeFragment"
+        android:label="fragment_add_home"
+        tools:layout="@layout/fragment_add_home" >
+        <action
+            android:id="@+id/action_addHomeFragment_to_menuFragment"
             app:destination="@id/menuFragment" />
     </fragment>
 </navigation>
