--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,8 +26,8 @@
             android:id="@+id/action_homeScreen_to_homeFragment"
             app:destination="@id/homeFragment" />
         <action
-            android:id="@+id/action_menuFragment_to_addHomeFragment"
-            app:destination="@id/addHomeFragment" />
+            android:id="@+id/action_menuFragment_to_addHomeDialogFragment"
+            app:destination="@id/addHomeDialogFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -38,13 +38,9 @@
             android:id="@+id/action_homeFragment_to_menuFragment"
             app:destination="@id/menuFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/addHomeFragment"
-        android:name="com.chorey.ui.menu.AddHomeFragment"
-        android:label="fragment_add_home"
-        tools:layout="@layout/fragment_add_home" >
-        <action
-            android:id="@+id/action_addHomeFragment_to_menuFragment"
-            app:destination="@id/menuFragment" />
-    </fragment>
+    <dialog
+        android:id="@+id/addHomeDialogFragment"
+        android:name="com.chorey.ui.menu.AddHomeDialogFragment"
+        android:label="fragment_add_home_dialog"
+        tools:layout="@layout/fragment_add_home_dialog" />
 </navigation>
