Create new home progress - GUI bug

--- a/app/src/main/res/layout/dialog_create_new_home.xml
+++ b/app/src/main/res/layout/dialog_create_new_home.xml
@@ -7,13 +7,17 @@
     android:layout_gravity="center"
     tools:context=".ui.menu.CreateNewHomeDialog">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="70dp"
-        android:layout_height="14dp"
-        android:text="TextView"
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/createHomeNameInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/create_home_hint" />
+    </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
