--- a/app/src/main/res/layout/dialog_create_new_home.xml
+++ b/app/src/main/res/layout/dialog_create_new_home.xml
@@ -13,7 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
