--- a/app/src/main/res/layout/dialog_create_new_home.xml
+++ b/app/src/main/res/layout/dialog_create_new_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".ui.menu.CreateNewHomeDialog">
+    tools:context=".dialog.CreateNewHomeDialog">
 
 
     <com.google.android.material.textfield.TextInputLayout
