--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,21 +32,35 @@
         android:textStyle="bold"
         />
 
+    <Button
+        android:id="@+id/addChoreButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_chore_button"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        app:layout_constraintTop_toBottomOf="@id/allChoresRecycler"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/all_chores_recycler"
+        android:id="@+id/allChoresRecycler"
         android:layout_width="wrap_content"
         android:clickable="true"
         android:clipToPadding="false"
         android:focusable="true"
-        android:minWidth="250dp"
+        android:minWidth="300dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.25"
+        app:layout_constraintVertical_bias="0.26"
         android:layout_height="300dp"
-        />
+        >
+
+    </androidx.recyclerview.widget.RecyclerView>
     <!-- TODO Need the other house properties -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
