--- a/app/src/main/res/layout/home_recycler_row.xml
+++ b/app/src/main/res/layout/home_recycler_row.xml
@@ -27,7 +27,6 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:flow_horizontalAlign="center"
                 android:text="@string/chore_item_name"
                 />
@@ -36,9 +35,9 @@
                 android:id="@+id/choreAssignedToText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/choreName"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/choreCardSpace"
                 android:text="@string/chore_item_assignee_text"
                 />
 
@@ -46,8 +45,7 @@
                 android:id="@+id/choreAssignee"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/choreName"
                 app:layout_constraintStart_toEndOf="@id/choreAssignedToText"
                 android:text="@string/chore_item_assignee"
                 />
@@ -58,7 +56,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/choreDueDate"
+                app:layout_constraintStart_toEndOf="@id/choreCardSpace"
                 android:text="@string/chore_item_due_text"
                 />
 
@@ -68,8 +66,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/button"
-                android:layout_marginEnd="10dp"
+                app:layout_constraintStart_toEndOf="@id/choreDueText"
                 android:text="@string/chore_item_due"
                 />
 
@@ -78,17 +75,16 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.4"
+                app:layout_constraintGuide_percent="0.55"
                 />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/choreDoneButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="10dp"
                 android:minHeight="0dp"
                 android:minWidth="0dp"
                 android:text="@string/chore_item_completed" />
