--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
         android:id="@+id/homeComingUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/home_coming_up"
+        android:text="@string/home_all_chores_text"
         app:layout_constraintTop_toBottomOf="@id/homeName"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
@@ -32,35 +32,47 @@
         android:textStyle="bold"
         />
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/allChoresRecycler"
+        style="@style/RecyclerStyleLarge"
+        tools:ignore="MissingConstraints"
+        >
+    </androidx.recyclerview.widget.RecyclerView>
+
     <Button
         android:id="@+id/addChoreButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_chore_button"
-        android:minWidth="0dp"
-        android:minHeight="0dp"
         app:layout_constraintTop_toBottomOf="@id/allChoresRecycler"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/allChoresRecycler"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:clickable="true"
-        android:clipToPadding="false"
-        android:focusable="true"
-        android:minWidth="300dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/addChoreButton"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.26"
-        android:layout_height="300dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         >
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <Button
+            android:id="@+id/addMemberButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_members_button" />
+
+        <Button
+            android:id="@+id/homeSummaryButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/home_summary_button" />
+    </LinearLayout>
+
     <!-- TODO Need the other house properties -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
