--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,6 +37,7 @@
         android:id="@+id/allChoresRecycler"
         style="@style/RecyclerStyleLarge"
         tools:ignore="MissingConstraints"
+        app:layout_constraintVertical_bias="0.45"
         >
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -64,13 +65,23 @@
             android:id="@+id/addMemberButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_members_button" />
+            android:text="@string/add_members_button"
+            style="?android:attr/buttonBarButtonStyle" />
+
+        <Button
+            android:id="@+id/homeToMenuButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle"
+            android:text="@string/home_to_menu_button" />
 
         <Button
             android:id="@+id/homeSummaryButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/home_summary_button" />
+            android:text="@string/home_summary_button"
+            style="?android:attr/buttonBarButtonStyle" />
     </LinearLayout>
 
     <!-- TODO Need the other house properties -->
