--- a/app/src/main/res/layout/dialog_create_home.xml
+++ b/app/src/main/res/layout/dialog_create_home.xml
@@ -4,14 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dialog.CreateNewHomeDialog">
+    tools:context=".dialog.CreateHomeDialog">
 
+
+    <TextView
+        android:id="@+id/createHomeTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/createHomeNameInput"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="@dimen/medium_text_size"
+        android:text="@string/create_home_title" />
 
     <Button
         android:id="@+id/createHomeCreateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/create_new_home_yes"
+        android:text="@string/create_home_yes"
         app:layout_constraintTop_toBottomOf="@id/createHomeNameInput"
         app:layout_constraintStart_toEndOf="@id/createHomeDialogLine"
         />
@@ -20,7 +30,7 @@
         android:id="@+id/createHomeCancelButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/create_new_home_no"
+        android:text="@string/create_home_no"
         app:layout_constraintTop_toBottomOf="@id/createHomeNameInput"
         app:layout_constraintEnd_toStartOf="@id/createHomeDialogLine"
         />
