--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
         />
 
     <TextView
-        android:id="@+id/homeComingUp"
+        android:id="@+id/homeRecyclerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/home_all_chores_text"
@@ -32,6 +32,18 @@
         android:textStyle="bold"
         />
 
+
+    <TextView
+        android:id="@+id/noChoresLeftText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/home_no_chores_left"
+        android:textSize="@dimen/medium_text_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/homeRecyclerTitle"
+        app:layout_constraintBottom_toTopOf="@id/addChoreButton"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/allChoresRecycler"
