--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="home_list_item_height">50dp</dimen>
     <dimen name="chore_list_item_height">30dp</dimen>
     <dimen name="large_text_size">36sp</dimen>
+    <dimen name="medium_text_size">20sp</dimen>
 
 </resources>
